--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,48 @@
+anyio==3.6.2
+certifi==2022.12.7
+charset-normalizer==3.0.1
+click==8.1.3
+contourpy==1.0.7
+cycler==0.11.0
+fastapi==0.92.0
+ffmpeg-python==0.2.0
+filelock==3.9.0
+fonttools==4.38.0
+future==0.18.3
+huggingface-hub==0.12.1
+idna==3.4
 joblib==1.2.0
+kiwisolver==1.4.4
+lazypredict==0.2.12
+lightgbm==3.3.5
+matplotlib==3.6.3
+more-itertools==9.0.0
 numpy==1.24.1
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+openai-whisper==20230124
+packaging==23.0
 pandas==1.5.3
+Pillow==9.4.0
+pydantic==1.10.5
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.7.1
+PyYAML==6.0
+regex==2022.10.31
+requests==2.28.2
 scikit-learn==1.2.1
 scipy==1.10.0
 six==1.16.0
+sniffio==1.3.0
+starlette==0.25.0
 threadpoolctl==3.1.0
+tokenizers==0.13.2
+torch==1.13.1
+tqdm==4.64.1
+transformers==4.26.1
+typing_extensions==4.5.0
+urllib3==1.26.14
+xgboost==1.7.4
